--- a/site-reliability-engineer.html
+++ b/site-reliability-engineer.html
@@ -124,7 +124,7 @@ PagerDuty runs. You partner with Engineering stakeholders to design and deliver
 <p><span class="badge badge-light">Pittsburgh</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/treasure-data/b1b8ebb0-d41a-499a-a48b-09b05b36f81f'>Arm Treasure Data - Site Reliability Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/treasure-data/b1b8ebb0-d41a-499a-a48b-09b05b36f81f'>Arm Treasure Data - Site Reliability Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -146,7 +146,7 @@ NodeJS.</p>
 <p><span class="badge badge-light">Charlotte</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/adhocexternal/jobs/4365101002'>Job Application for Site Reliability Engineer  at Ad Hoc Team</a></h5> 
+<h5><a href='https://boards.greenhouse.io/adhocexternal/jobs/4365101002'>Job Application for Site Reliability Engineer  at Ad Hoc Team</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
@@ -158,11 +158,11 @@ NodeJS.</p>
 <p><span class="badge badge-light">Minneapolis</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/adhocexternal/jobs/4365104002'>Job Application for Site Reliability Engineer  at Ad Hoc Team</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/adhocexternal/jobs/4365104002'>Job Application for Site Reliability Engineer  at Ad Hoc Team</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/harmonic/job/ozJJ9fwU'>Harmonic Inc. Careers - Site Reliability Engineer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/harmonic/job/ozJJ9fwU'>Harmonic Inc. Careers - Site Reliability Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>1 day ago ... Description. We are seeking for a Site Reliability Engineer who will be a part of a 
 team to be responsible for supporting Harmonic VOS platform. VOS is?...</p>
@@ -252,7 +252,7 @@ for this job. Quizlet's mission is to help students (and their teachers) practic
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/SnowSoftware/743999691956898-site-reliability-engineer-architect'>Snow Software Site Reliability Engineer Architect | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/SnowSoftware/743999691956898-site-reliability-engineer-architect'>Snow Software Site Reliability Engineer Architect | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
@@ -297,7 +297,7 @@ durably while increasing product velocity, and further deliver on our mission to
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/blameless/2c3e30e3-8e9b-4c5a-af48-ef7c927b5e93'>Blameless - Senior Site Reliability Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/blameless/2c3e30e3-8e9b-4c5a-af48-ef7c927b5e93'>Blameless - Senior Site Reliability Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
@@ -305,7 +305,7 @@ durably while increasing product velocity, and further deliver on our mission to
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/griddynamics/job/oyGX9fw4'>Grid Dynamics Careers - Site Reliability Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/griddynamics/job/oyGX9fw4'>Grid Dynamics Careers - Site Reliability Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
