--- a/data-engineer.html
+++ b/data-engineer.html
@@ -40,6 +40,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.smartrecruiters.com/Ubisoft2/743999692349818-data-engineer'>Ubisoft Data Engineer | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-26</p>
+<hr/>
 <h5><a href='https://jobs.lever.co/hophr/602ba62e-1f10-4d4c-87a8-a6ca41221859'>HopHR - Data Engineer - San Jose, CA</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
@@ -48,11 +52,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/PurposeFinancial/743999692323217-data-engineer'>Purpose Financial Data Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/PurposeFinancial/743999692323217-data-engineer'>Purpose Financial Data Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/hophr/2e7db708-afa2-428a-9896-6cd03cdfcfc7'>HopHR - Data Engineer - Boston, MA</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/hophr/2e7db708-afa2-428a-9896-6cd03cdfcfc7'>HopHR - Data Engineer - Boston, MA</a></h5> 
 <p><span class="badge badge-light">Boston, MA</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -72,7 +76,7 @@
 <p><span class="badge badge-light">Tokyo Tokyo, Japan</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://cbs.avature.net/cbsinteractivecareers/JobDetail/Data-Engineer/14854'>Data Engineer - CBS Interactive Careers</a></h5> 
+<h5><a href='https://cbs.avature.net/cbsinteractivecareers/JobDetail/Data-Engineer/14854'>Data Engineer - CBS Interactive Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>6 days ago ... Truly premium content. At true scale. Only CBSi. CBS Interactive is the premier 
 online content network for information and online operations of CBS Corporation
@@ -103,7 +107,7 @@ created Data Management Excellence Team. Within this multidisciplinary team?...<
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://crisalix.workable.com/j/3BBA95D413'>Crisalix - Jobs: Data Engineer - Apply online</a></h5> 
+<h5><a href='https://crisalix.workable.com/j/3BBA95D413'>Crisalix - Jobs: Data Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -129,7 +133,7 @@ created Data Management Excellence Team. Within this multidisciplinary team?...<
 <p><span class="badge badge-light">Atlanta California</span></p>
 <p>Posted on:: 2019-04-05</p>
 <hr/>
-<h5><a href='https://talpasolutions.join.com/jobs/259453-data-engineer'>Job @ talpasolutions (Essen): Data Engineer | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://talpasolutions.join.com/jobs/259453-data-engineer'>Job @ talpasolutions (Essen): Data Engineer | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
@@ -296,7 +300,7 @@ The hire will be responsible for expanding and optimizing our Operations data?..
 <p><span class="badge badge-light">Stockholm Stockholm Stockholm London</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://itecor.workable.com/j/D433253227'>Itecor - Jobs: Data Engineer Specialist - Apply online</a></h5> 
+<h5><a href='https://itecor.workable.com/j/D433253227'>Itecor - Jobs: Data Engineer Specialist - Apply online</a></h5> 
 <p><span class="badge badge-light">France</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
@@ -310,7 +314,7 @@ The hire will be responsible for expanding and optimizing our Operations data?..
 <p><span class="badge badge-light">Michigan, United States</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/AdamKayGroup/743999692034780-data-engineer'>Adam Kay Group Data Engineer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/AdamKayGroup/743999692034780-data-engineer'>Adam Kay Group Data Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Michigan, United States</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -338,7 +342,7 @@ The hire will be responsible for expanding and optimizing our Operations data?..
 <p><span class="badge badge-light">San Francisco, CA, USA</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/appannie/jobs/1782960'>Job Application for Big Data Engineer Intern at App Annie</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/appannie/jobs/1782960'>Job Application for Big Data Engineer Intern at App Annie</a></h5> 
 <p><span class="badge badge-light">Beijing</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -367,7 +371,7 @@ online content network for information and online operations of CBS Corporation
 <p>Jul 7, 2019 ... Strong 8+ years of industry experience. 2. 4-8 years of strong experience in 
 working in Datawarehouse, Data lake, Hadoop landscape. 3. Expert level?...</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/vividseats/job/o9gBafwU'> Vivid Seats Careers - Data Engineering Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/vividseats/job/o9gBafwU'> Vivid Seats Careers - Data Engineering Manager</a></h5> 
 <p><span class="badge badge-light">Chicago</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -470,11 +474,6 @@ YOUR TEAM. The successful candidate will join the team responsible for the?...</
 <h5><a href='https://boards.greenhouse.io/freshbooks/jobs/1771243'>Job Application for Senior Data Engineer at FreshBooks</a></h5> 
 <p><span class="badge badge-light">Toronto, Canada</span></p>
 <p>Posted on: 2019-07-20</p>
-<hr/>
-<h5><a href='https://atypon-systems-inc.workable.com/j/3E0A798C0C?viewed=true'>Machine Learning / AI / Big Data Engineer ... - Atypon Systems - Jobs</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>3 days ago ... Apply online for the job of Machine Learning / AI / Big Data Engineer, Athens at 
-Atypon Systems.</p>
 <hr/>
 
 
